# ti-record-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  debug.py  pyproject.toml
app/: main.py
app/api/: router.py
app/api/filter_records/: controller.py  models.py  services.py
app/core/: config.py  constants.py
app/custom_exceptions/: filter_from_json_exceptions.py  filter_from_mongo_exception.py  filter_from_sql_exception.py
app/tests/api/filter_records/: test_controller.py  test_models.py  test_services.py
app/tests/utils/: test_api_token_helper.py  test_logger_helper.py  test_record_generator.py
app/tests/workers/filter_records/: test_filter_from_json.py  test_filter_from_mongo.py  test_filter_from_mysql.py
app/utils/: api_token_helper.py  logger_helper.py  model_helper.py  record_generator.py  request_id_middleware.py
app/workers/filter_records/: filter_from_json.py  filter_from_mongo.py  filter_from_mysql.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
